@@ -1,16 +1,25 @@
 import sbt.Keys._
 import de.heikoseeberger.sbtheader.license.Apache2_0
+import catext.Dependencies._
+
+val dev  = Seq(Dev("47 Degrees (twitter: @47deg)", "47 Degrees"))
+val gh   = GitHubSettings("com.fortysevendeg", "sbt-microsites", "47 Degrees", apache)
+val vAll = Versions(versions, libraries, scalacPlugins)
 
 lazy val artifactSettings = Seq(
-  name := "sbt-microsites",
-  organization := "com.fortysevendeg",
-  organizationName := "47 Degrees",
+  name := gh.proj,
+  organization := gh.org,
+  organizationName := gh.publishOrg,
   homepage := Option(url("http://www.47deg.com")),
   organizationHomepage := Some(new URL("http://47deg.com")),
   headers := Map(
     "scala" -> Apache2_0("2016", "47 Degrees, LLC. <http://www.47deg.com>")
   )
 )
+
+pgpPassphrase := Some(sys.env.getOrElse("PGP_PASSPHRASE", "").toCharArray)
+pgpPublicRing := file(s"${sys.env.getOrElse("PGP_FOLDER", ".")}/pubring.gpg")
+pgpSecretRing := file(s"${sys.env.getOrElse("PGP_FOLDER", ".")}/secring.gpg")
 
 lazy val pluginSettings = Seq(
     sbtPlugin := true,
@@ -20,13 +29,11 @@ lazy val pluginSettings = Seq(
       "jgit-repo" at "http://download.eclipse.org/jgit/maven"
     ),
     libraryDependencies ++= Seq(
-      "com.lihaoyi"    %% "scalatags"  % "0.6.0",
-      "org.scalactic"  %% "scalactic"  % "3.0.0",
-      "org.scalatest"  %% "scalatest"  % "3.0.0" % "test",
-      "org.scalacheck" %% "scalacheck" % "1.13.2" % "test"
+      "com.lihaoyi"   %% "scalatags" % "0.6.0",
+      "org.scalactic" %% "scalactic" % "3.0.0"
     ),
     scalafmtConfig in ThisBuild := Some(file(".scalafmt"))
-  ) ++ reformatOnCompileSettings
+  ) ++ reformatOnCompileSettings ++ addTestLibs(vAll, "scalatest", "scalacheck")
 
 lazy val micrositeSettings = Seq(
   micrositeName := "sbt-microsites",
@@ -35,6 +42,7 @@ lazy val micrositeSettings = Seq(
   micrositeDocumentationUrl := "/sbt-microsites/docs/",
   micrositeGithubOwner := "47deg",
   micrositeGithubRepo := "sbt-microsites",
+  micrositeHighlightTheme := "color-brewer",
   includeFilter in makeSite := "*.html" | "*.css" | "*.png" | "*.jpg" | "*.gif" | "*.js" | "*.swf" | "*.md"
 )
 
@@ -56,11 +64,11 @@ lazy val jsSettings = Seq(
     "com.fortysevendeg" %%% "github4s" % "0.8.2-SNAPSHOT",
     "fr.hmil" %%% "roshttp" % "2.0.0-RC1"
   ),
-  resolvers ++= Seq(Resolver.url(
-    "bintray-sbt-plugin-releases",
-    url("https://dl.bintray.com/content/sbt/sbt-plugin-releases"))(Resolver.ivyStylePatterns),
-    Resolver.sonatypeRepo("snapshots"),
-    Resolver.bintrayRepo("denigma", "denigma-releases")),
+  resolvers ++= Seq(Resolver.url("bintray-sbt-plugin-releases",
+                                 url("https://dl.bintray.com/content/sbt/sbt-plugin-releases"))(
+                      Resolver.ivyStylePatterns),
+                    Resolver.sonatypeRepo("snapshots"),
+                    Resolver.bintrayRepo("denigma", "denigma-releases")),
   jsDependencies ++= Seq(
     "org.webjars" % "jquery" % "2.1.3" / "2.1.3/jquery.js",
     ProvidedJS / "codemirror.js",
@@ -68,57 +76,27 @@ lazy val jsSettings = Seq(
   )
 )
 
-lazy val testSettings =
-  ScriptedPlugin.scriptedSettings ++ Seq(
-    scriptedDependencies <<= (compile in Test) map { (analysis) =>
-      Unit
-    },
-    scriptedLaunchOpts := {
-      scriptedLaunchOpts.value ++
-        Seq(
-          "-Xmx2048M",
-          "-XX:MaxPermSize=512M",
-          "-XX:ReservedCodeCacheSize=256m",
-          "-XX:+UseConcMarkSweepGC",
-          "-Dplugin.version=" + version.value,
-          "-Dscala.version=" + scalaVersion.value
-        )
-    }
-  )
-
-lazy val noPublishSettings = Seq(
-  publish := (),
-  publishLocal := (),
-  publishArtifact := false
-)
-
 lazy val buildInfoSettings = Seq(
   buildInfoKeys := Seq[BuildInfoKey](name, version, scalaVersion, sbtVersion),
   buildInfoPackage := "microsites"
 )
 
-lazy val miscSettings = Seq(
-  shellPrompt := { s: State =>
-    val c     = scala.Console
-    val blue  = c.RESET + c.BLUE + c.BOLD
-    val white = c.RESET + c.BOLD
-
-    val projectName = Project.extract(s).currentProject.id
-
-    s"$blue$projectName$white>${c.RESET}"
-  }
-)
-
 lazy val commonSettings = artifactSettings ++ miscSettings
-lazy val allSettings    = pluginSettings ++ commonSettings ++ tutSettings ++ testSettings
+lazy val allSettings = pluginSettings ++
+    commonSettings ++
+    tutSettings ++
+    testScriptedSettings ++
+    sharedReleaseProcess ++
+    credentialSettings ++
+    sharedPublishSettings(gh, dev)
 
 lazy val `sbt-microsites` = (project in file("."))
   .settings(moduleName := "sbt-microsites")
   .settings(allSettings: _*)
   .settings(addSbtPlugin("com.typesafe.sbt" % "sbt-native-packager" % "1.0.3"))
-  .settings(addSbtPlugin("org.tpolecat"     % "tut-plugin"          % "0.4.4"))
-  .settings(addSbtPlugin("com.typesafe.sbt" % "sbt-site"            % "1.0.0"))
-  .settings(addSbtPlugin("com.typesafe.sbt" % "sbt-ghpages"         % "0.5.4"))
+  .settings(addSbtPlugin("org.tpolecat" % "tut-plugin" % "0.4.5"))
+  .settings(addSbtPlugin("com.typesafe.sbt" % "sbt-site" % "1.0.0"))
+  .settings(addSbtPlugin("com.typesafe.sbt" % "sbt-ghpages" % "0.5.4"))
   .enablePlugins(JekyllPlugin, AutomateHeaderPlugin)
 
 lazy val docs = (project in file("docs"))
@@ -136,8 +114,3 @@ lazy val js = (project in file("js"))
   .settings(jsSettings:_*)
   .settings(KazariBuild.kazariTasksSettings:_*)
   .enablePlugins(ScalaJSPlugin)
-  .enablePlugins(BuildInfoPlugin)
-  .settings(
-    buildInfoKeys := Seq[BuildInfoKey]("token" -> Option(sys.props("token")).getOrElse("")),
-    buildInfoPackage := "kazari"
-  )
